# rabbit-jump-game

./: .gitignore  BUILD.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  settings.py  sound.py
game/: __init__.py  core.py
input/: __init__.py  joycon.py
level/: __init__.py  background.py  difficulty.py  obstacles.py  weather.py
player/: __init__.py  controller.py  costumes.py  player.py
