[project]
name = "rabbit-jump-game"
version = "0.1.0"
description = "A 2D pixel-style endless runner game featuring a bunny with costume customization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rabbit Jump Team"}
]
dependencies = [
    "pygame>=2.5.0",
    "hidapi>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
